deploy/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citricloud-webmail-redis-headless
spec:
  clusterIP: None
  selector:
    app: citricloud-webmail-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: citricloud-webmail-redis
spec:
  selector:
    app: citricloud-webmail-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
