deploy/k8s/webmail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citricloud-webmail
spec:
  selector:
    app: citricloud-webmail
  ports:
    - name: http
      port: 80
      targetPort: http
